[gd_scene load_steps=8 format=3 uid="uid://i1ncxot38ce8"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_m68i6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_675sg"]
size = Vector3(14.5, 11, 3)

[sub_resource type="Animation" id="Animation_k51uf"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l1dep"]
resource_name = "spider-walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_o0biw"]
resource_name = "attack"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xw54l"]
_data = {
"RESET": SubResource("Animation_k51uf"),
"attack": SubResource("Animation_o0biw"),
"walk": SubResource("Animation_l1dep")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_ti4pq"]
size = Vector3(12.5, 11, 2)

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_m68i6")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.783234, 2.07396, 0.00131836)
shape = SubResource("BoxShape3D_675sg")

[node name="Pivot" type="Node3D" parent="."]

[node name="EnemySprite" type="Sprite3D" parent="Pivot"]
pixel_size = 0.5
shaded = true
texture_filter = 0
hframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
libraries = {
"": SubResource("AnimationLibrary_xw54l")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.783234, 2.07396, 0.00131836)
shape = SubResource("BoxShape3D_ti4pq")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
